scrollbar ios fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,6 +172,11 @@ body {
 ::-webkit-scrollbar-thumb:hover { background-color: var(--rich-black-fogra-29-1); }
 
 
+::-webkit-scrollbar-track {
+  background-color: #d7f81d;
+}
+
+
 
 
 
@@ -1126,6 +1131,10 @@ body {
   .container { max-width: 720px; }
 
   .scrollbar-item { min-width: calc(50% - 12.5px); color: #ffff00;}
+
+  ::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
 
 
 
